# PhotoShare_PythonWeb9_4

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 01127fdf1625_init.py  0c79b2af04cd_photo.py  322cc71a22d4_init.py  7da073920528_roles_to_role.py
migrations/: env.py
migrations/versions/: 0f25fe401892_init.py  215416483919_init.py  2811ee2a166b_i.py  4956684b7e6b_updated_photo_model.py  506bb600a6d9_init.py  55524d56daed_9.py  596b2d15ae1e_2.py  5bb32703a9e9_10.py  756195200d06_7.py  7f28bd30740a_updated_photo_table.py  8170694d0224_user_unique_username.py  819f2f3b867c_init.py  8e5c143fa9bd_4.py  94606ee92462_8.py  948b4a7e4a9c_12.py  977ef879f324_added_comment_table.py  99b184373c3d_6.py  a50ff0cd3721_5.py  c27f122a7e9d_init.py  dbd088525290_i.py  dd389954b368_added_photo_to_photo_model.py  e20aabad0050_init.py  f49f705c2b74_3.py
src/: schemas.py
src/conf/: config.py
src/database/: connect.py  models.py
src/repository/: comments.py  photos.py  rating.py  tags.py  users.py
src/routes/: auth.py  comments.py  photos.py  rating.py  users.py
src/schemas/: auth.py  comments.py  photos.py  rating.py  users.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: password_reset_token.html
templates/: index.html
tests/: conftest.py  test_repository_comments.py  test_repository_photos.py  test_repository_rating.py  test_repository_tags.py  test_root.py  test_users.py  tests_repository_photos.py  tests_users.py
utils/: py_logger.py
